[gd_scene load_steps=2 format=3 uid="uid://3mbvvji1swv8"]

[ext_resource type="Script" uid="uid://ydxa807ytia4" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.7254902, 1, 1, 0.48235294)

[node name="ModeLabel" type="Label" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsLabel" type="Label" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="TrainingPanel" type="Panel" parent="UI" groups=["training panel"]]
visible = false
self_modulate = Color(1, 1, 1, 0)
light_mask = 2
visibility_layer = 2
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -647.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TrainingPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="TrainAttackBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Train Attack
"

[node name="TrainDefenseBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Train Defense"
metadata/_edit_use_anchors_ = true

[node name="TrainHPBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Train Hp
"

[node name="RestBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Rest"

[node name="StartBattleBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Start Battle"

[node name="TriggerEventBtn" type="Button" parent="UI/TrainingPanel/HBoxContainer"]
layout_mode = 2
text = "Event"

[node name="BattlePanel" type="Panel" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
visibility_layer = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleInfo" type="Label" parent="UI/BattlePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillsContainer" type="HBoxContainer" parent="UI/BattlePanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8194444
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="EventPanel" type="Panel" parent="UI"]
self_modulate = Color(1, 1, 1, 0)
visibility_layer = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventText" type="Label" parent="UI/EventPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4826389
anchor_top = 0.3472222
anchor_right = 0.5173611
anchor_bottom = 0.3919753
offset_top = 1.5258789e-05
grow_horizontal = 2
grow_vertical = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="UI/EventPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/TrainAttackBtn" to="." method="_on_train_attack_pressed"]
[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/TrainDefenseBtn" to="." method="_on_train_defense_pressed"]
[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/TrainHPBtn" to="." method="_on_train_hp_pressed"]
[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/RestBtn" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/StartBattleBtn" to="." method="_on_start_battle_pressed"]
[connection signal="pressed" from="UI/TrainingPanel/HBoxContainer/TriggerEventBtn" to="." method="_on_trigger_event_pressed"]
